--- a/arch/arm64/configs/kylo_defconfig
+++ b/arch/arm64/configs/kylo_defconfig
@@ -255,7 +255,7 @@ CONFIG_IOSCHED_BFQ=y
 CONFIG_IOSCHED_SIOPLUS=y
 CONFIG_DEFAULT_CFQ=y
 # CONFIG_DEFAULT_NOOP is not set
-CONFIG_DEFAULT_IOSCHED="cfq"
+CONFIG_DEFAULT_IOSCHED="bfq"
 CONFIG_ASN1=y
 CONFIG_UNINLINE_SPIN_UNLOCK=y
 CONFIG_ARCH_SUPPORTS_ATOMIC_RMW=y
