--- a/arch/arm64/configs/kylo_defconfig
+++ b/arch/arm64/configs/kylo_defconfig
@@ -47,6 +47,7 @@ CONFIG_AUDIT=y
 # CONFIG_AUDIT_LOGINUID_IMMUTABLE is not set
 CONFIG_WQ_POWER_EFFICIENT_DEFAULT=y
 CONFIG_WAKE_GESTURES=y
+CONFIG_ADRENO_IDLER=y
 CONFIG_SOUND_CONTROL_HAX_3_GPL=y
 
 #
